--- a/src/components/Timer/Timer.css
+++ b/src/components/Timer/Timer.css
@@ -1,24 +1,21 @@
-.timer>button{
-    background-color: transparent;
-    border: none;
+#timerButtons > button {
+  background-color: transparent;
+  border: none;
 }
 
-.timer{
-   box-shadow: 3px 3px 2px black;
-   border-radius: 5px;
-   border: 1px solid black;
-   padding: 5px 5px;
-   font-size: large;
-   /* margin-right: 20px; */
-   /* margin-left: 20px; */
-   /* margin-top: 20px; */
-   flex: 0.4;
-   width: fit-content;
-   width: 20rem;
+.timer {
+  box-shadow: 2px 2px 2px rgb(52, 51, 51);
+  border-radius: 5px;
+  border: 1px solid transparent;
+  padding: 2px 2px;
+  font-size: large;
+  flex: 0.4;
+  width: 300px;
+  display: grid;
+  place-items: center;
+  height:120px
 }
 
-#timerTime{
-    font-size: 20px;
-    margin-left: 10px;
-    margin-right: 10px;
+#timerTime {
+  font-size: 20px;
 }
