--- a/src/homepage/home.css
+++ b/src/homepage/home.css
@@ -24,8 +24,8 @@
 .todoList{
     /* border: 1px solid rgb(132, 121, 121); */
     border-radius: 5px;
-    padding: 10px 10px;
-    margin-top: 20px;
+    /* padding: 10px 10px; */
+    margin-top: 0px;
     margin-left: 10px;
     margin-right: 10px;
     /* box-shadow: 3px 3px 2px rgb(108, 104, 104); */
@@ -34,7 +34,7 @@
     vertical-align: middle;
 }
 
-.todoList>input{
+#todoInput{
     border: none;
     border-bottom: 2px solid black;
     margin-bottom: 2px;
@@ -64,6 +64,7 @@
 .body{
     display: flex;
     flex-direction: row;
+    width: 100%;
 }
 
 @media all and (max-width:500px){
@@ -71,12 +72,4 @@
         display: flex;
         flex-direction: column;
     }
-}
-
-.footer{
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
 }
