--- a/src/components/Themes/Themes.css
+++ b/src/components/Themes/Themes.css
@@ -1,12 +1,19 @@
 .themeOut{
-    flex: 0.1;
-    align-self: start;
+    /* flex: 0.3;
+    align-self: start; */
+    margin-top: 50px;
+    display: grid;
+    place-items: center;
+    width: 300px;
 }
 .themes{
-    display: flex;
+    /* display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-top: 20px;
+    margin-top: 20px; */
+    display: grid;
+    grid-template-rows: 50px 50px 50px;
+    grid-template-columns: 50px 50px 50px;
 }
 
 .themes>button{
