--- a/src/components/Themes/Themes.css
+++ b/src/components/Themes/Themes.css
@@ -1,19 +1,22 @@
 .themeOut{
     /* flex: 0.3;
     align-self: start; */
-    margin-top: 50px;
+    margin-top: 10px;
     display: grid;
     place-items: center;
     width: 300px;
 }
 .themes{
-    /* display: flex;
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-top: 20px; */
-    display: grid;
-    grid-template-rows: 50px 50px 50px;
-    grid-template-columns: 50px 50px 50px;
+    margin-top: 5px;
+    justify-content: center;
+    align-items: center;
+    /* display: grid;
+    place-items: center;
+    grid-template-rows: 40px 40px 40px;
+    grid-template-columns: 40px 40px 40px; */
 }
 
 .themes>button{
@@ -22,8 +25,8 @@
     border-radius: 12.5px;
     border: none;
     box-shadow: 2px 2px 2px black;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
     margin-top: 5px;
     margin-bottom: 5px;
 }
