todo status tabs

--- a/src/components/Timer/Timer.css
+++ b/src/components/Timer/Timer.css
@@ -13,7 +13,8 @@
   width: 300px;
   display: grid;
   place-items: center;
-  height:120px
+  height:100px;
+  min-height: 100px;
 }
 
 #timerTime {
