🚀 Removed Sorting Visualizer

--- a/src/homepage/home.css
+++ b/src/homepage/home.css
@@ -61,6 +61,11 @@
     border-radius: 10px;
 }
 
+#gamesButton:hover{
+    cursor: pointer;
+}
+
+
 #messageBody::-webkit-scrollbar{
     width: 8px;
 }
