--- a/src/components/Clock/Clock.css
+++ b/src/components/Clock/Clock.css
@@ -1,12 +1,14 @@
 .clock{
     font-size: 30px;
-    box-shadow: 2px 2px 2px rgb(52, 51, 51);
+    /* box-shadow: 2px 2px 2px rgb(52, 51, 51); */
     width: 300px;
     padding: 5px 5px;
     border-radius: 50px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    margin-top: -10px;
     text-align: center;
     height: 80px;
     display: grid;
     place-items: center;
+    background-color: transparent;
 }
