--- a/src/components/ambientSounds/ambientSounds.css
+++ b/src/components/ambientSounds/ambientSounds.css
@@ -2,13 +2,23 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    max-width: 250px;
+    flex-wrap: wrap;
+    margin-top: 20px;
 }
 
 .ambientButton{
-    margin: 0 10px;
+    margin: 10 10px;
     padding: 0 10px;
     border: none;
     border-radius: 5px;
     background-color: transparent;
     cursor: pointer;
+}
+
+#soundPlayer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
 }
