--- a/src/homepage/home.css
+++ b/src/homepage/home.css
@@ -50,9 +50,15 @@
     border-bottom: 2px solid black;
     margin-bottom: 2px;
     font-family: 'VT323', monospace;
-    font-size: 16px;
+    font-size: 20px;
     background-color: transparent;
     border-radius: 2px;
+    margin-top: 10px;
+    width: 85%;
+    height: 30px;
+}
+#todoInput:focus{
+    outline: none;
 }
 
 .todo-list{
