--- a/src/components/MediaPlayer/MediaPlayer.css
+++ b/src/components/MediaPlayer/MediaPlayer.css
@@ -78,8 +78,7 @@ audio::-webkit-media-controls-panel {
   #gif{
     place-self: center;
     border: 0px solid gray;
-    /* height: 32rem; */
-    width: 100%;
+    height: 500px;
     border-radius: 5px;
   }
 
@@ -107,5 +106,6 @@ audio::-webkit-media-controls-panel {
     }
     #gif{
       margin-top: 40px;
+      max-height: 300px;
     }
   }
