--- a/src/homepage/home.css
+++ b/src/homepage/home.css
@@ -82,19 +82,20 @@
 
 #gamesButton:hover{
     cursor: pointer;
+    scale: 1.05;
 }
 
 #quotes{
-    max-height: 150px;
+    max-height: 180px;
     width: 300px; 
     border-radius: 10px;
-    padding: 5px;
+    padding: 10px 10px;
     overflow-y: scroll;
     overflow-x: hidden;
     box-shadow: 2px 2px 2px rgb(52, 51, 51),;
     font-size: 25;
     margin-bottom: 10px;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 #quotes::-webkit-scrollbar{
     width: 5px;
