--- a/src/login/login.css
+++ b/src/login/login.css
@@ -4,32 +4,35 @@
     margin-top: 0px;
 }
 #loginForm{
-    display: grid;
-    place-items: center;
+    /* display: grid;
+    place-items: center; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     font-family: 'VT323', monospace;
-    /* border: 3px solid rgb(137, 130, 130); */
-    box-shadow: 0px 0px 10px 0px rgb(137, 130, 130);
+    box-shadow: 3px 3px 2px 3px rgb(59, 58, 58);
     width: 500px;
-    margin-top: 50px;
-    height: fit-content;
+    margin-top: 40px;
+    height: 400px;
     border-radius: 20px;
     padding: 20px 20px;
-    /* background-image: url("https://images2.alphacoders.com/131/1318225.png");
+    background-image: url("../assets/images/loginBg.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px); */
+    -webkit-backdrop-filter: blur(10px);
 }
 #username,#password{
     font-family: 'VT323', monospace;
     border-radius: 5px;
     font-size: 20px;
-    background-color: transparent;
     height: 25px;
     padding:5px 5px;
     width: 250px;
     padding: 10px 10px;
+    border: 1px solid black;
+    background-color: whitesmoke;
 }
 #username,#password:focus{
     outline: none;
@@ -42,15 +45,53 @@
 }
 
 #loginBtn{
-    width: fit-content;
+    width: 270px;
     place-self: center;
     font-family: 'VT323', monospace;
     background-color: transparent;
-    border: 3px solid black;
-    font-size: 20px;
+    border: 2px solid black;
+    font-size: 23px;
     margin-bottom: 10px;
-    padding: 5px;
+    color: black;
+    /* text-shadow: 1px 1px 1px rgb(49, 49, 49); */
+    padding: 7px 7px;
+    background-color: rgb(191, 210, 228);
+    border-radius: 5px;
+
 }
 #loginBtn:hover{
     cursor: pointer;
+    background-color: rgb(62, 111, 155);
+}
+
+#loginHead{
+  text-shadow: 5px 5px 5px rgb(49, 49, 49);
+  color: whitesmoke;
+}
+
+#registerRedirect{
+    font-size: 20px;
+    background-color: aliceblue;
+    padding: 2px 2px;
+    border-radius: 5px;
+    width: 260px;
+}
+
+@media only screen and (max-width: 600px) {
+    #loginForm{
+        width: 300px;
+        height: 400px;
+    }
+    #username,#password{
+        width: 200px;
+    }
+    #loginBtn{
+        width: 220px;
+    }
+    #registerRedirect{
+        width: 210px;
+    }
+    #loginHead{
+        font-size: 20px;
+    }
 }
