--- a/src/login/login.css
+++ b/src/login/login.css
@@ -10,18 +10,17 @@
     flex-direction: column;
     align-items: center;
     font-family: 'VT323', monospace;
-    box-shadow: 3px 3px 2px 3px rgb(59, 58, 58);
+    /* box-shadow: 3px 3px 2px 3px rgb(59, 58, 58); */
     width: 500px;
     margin-top: 40px;
     height: 400px;
     border-radius: 20px;
     padding: 20px 20px;
-    background-image: url("../assets/images/loginBg.png");
+    /* background-image: url("../assets/images/loginBg.jpg"); */
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
+    background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,1));
 }
 #username,#password{
     font-family: 'VT323', monospace;
