--- a/src/login/login.css
+++ b/src/login/login.css
@@ -10,7 +10,7 @@
     flex-direction: column;
     align-items: center;
     font-family: 'VT323', monospace;
-    /* box-shadow: 3px 3px 2px 3px rgb(59, 58, 58); */
+    box-shadow: 1px 1px 1px 1px rgb(141, 140, 140);
     width: 500px;
     margin-top: 40px;
     height: 400px;
@@ -20,7 +20,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,1));
+    background-image: linear-gradient(300deg,rgba(255, 255, 255, 0),rgba(255, 255, 255, 0.7));
 }
 #username,#password{
     font-family: 'VT323', monospace;
@@ -54,18 +54,18 @@
     color: black;
     /* text-shadow: 1px 1px 1px rgb(49, 49, 49); */
     padding: 7px 7px;
-    background-color: rgb(191, 210, 228);
+    background-color: rgb(214, 221, 228);
     border-radius: 5px;
 
 }
 #loginBtn:hover{
     cursor: pointer;
-    background-color: rgb(62, 111, 155);
+    background-color: rgb(157, 180, 201);
 }
 
 #loginHead{
-  text-shadow: 5px 5px 5px rgb(49, 49, 49);
-  color: whitesmoke;
+  text-shadow: 5px 5px 5px whitesmoke;
+  color: rgb(41, 40, 40);
 }
 
 #registerRedirect{
