--- a/src/components/ambientSounds/ambientSounds.css
+++ b/src/components/ambientSounds/ambientSounds.css
@@ -22,3 +22,25 @@
     align-items: center;
     margin: 10px;
 }
+
+@media screen and (max-width:1280px){
+    .ambientSounds{
+        max-width: 250px;
+    }
+}
+
+@media screen and (max-width:1140px){
+    .ambientSounds{
+        max-width: 200px;
+    }
+}
+@media screen and (max-width:1024px){
+    .ambientSounds{
+        max-width: 180px;
+    }
+}
+@media screen and (max-width:768px){
+    .ambientSounds{
+        max-width: 160px;
+    }
+}
