--- a/src/homepage/home.css
+++ b/src/homepage/home.css
@@ -115,6 +115,9 @@
     margin-bottom: 10px;
     margin-top: 20px;
 }
+#quotes>div{
+    font-size: 22px;
+}
 #quotes::-webkit-scrollbar{
     width: 5px;
 }
@@ -149,24 +152,6 @@ html::-webkit-scrollbar{
     cursor: pointer;
 }
 
-.weather-card{
-    font-size: 30px;
-    margin-bottom: 2px;
-    width: 300px;
-    padding: 10px 10px;
-    border-radius: 10px;
-    margin-top: 2px;
-    text-align: center;
-    min-height: 120px;
-    display: grid;
-    position:relative;
-    box-shadow: 2px 2px 2px rgb(52, 51, 51);
-}
-.weather-card:hover{
-    cursor: pointer;
-    transform: scale(1.05);
-}
-
 .body{
     display: flex;
     flex-direction: row;
@@ -179,18 +164,6 @@ html::-webkit-scrollbar{
     right: 0;
 }
 
-#todo_container{
-    margin-left: 5px;
-    width: 300px;
-}
-
-#todo_container>h2{
-    margin-top: 35px;
-    font-weight: 500;
-    margin-bottom: 5px;
-}
-
-
 
 @media screen and (max-width:640px){
     .body{
@@ -200,21 +173,51 @@ html::-webkit-scrollbar{
     #subhead{
         display: none;
     }
-    .weather-card{
-        display: none;
-    }
     .footer{
         position: relative;
         right: -80px;
         padding: 10px;
-    }
-    #todo_container>h2{
-        margin-top: 20px;
     }
     #chat_dialog{
        width: 350px;
     }
     #trivia_container{
         display: none;
+    }
+}
+
+
+@media screen and (max-width:1280px){
+    .gamesButton{
+        max-width: 200px;
+    }
+    #quotes{
+        max-width: 280px;
+    }
+}
+@media screen and (max-width:1140px){
+    #quotes{
+        max-width: 260px;
+    }
+    #quotes>div{
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width:1024px){
+    .gamesButton{
+        max-width: 180px;
+    }
+    #quotes{
+        max-width: 220px;
+        font-size: 12px;
+    }
+    #quotes>div{
+        font-size: 18px;
+    }
+}
+@media screen and (max-width:768px){
+    .gamesButton{
+        max-width: 160px;
     }
 }
