--- a/src/components/ambientSounds/ambientSounds.css
+++ b/src/components/ambientSounds/ambientSounds.css
@@ -37,6 +37,15 @@
 @media screen and (max-width:1024px){
     .ambientSounds{
         max-width: 180px;
+        margin-top: 10px;
+    }
+    .ambientButton{
+        margin: 5 5px;
+        padding: 0 5px;
+        border: none;
+        border-radius: 5px;
+        background-color: transparent;
+        cursor: pointer;
     }
 }
 @media screen and (max-width:768px){
