--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -2,6 +2,7 @@
     display: grid;
     place-items: center; 
     margin-top: 0px;
+    /* min-height: 90vh; */
 }
 #loginForm{
     /* display: grid;
