--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -41,6 +41,48 @@
     text-align: right;
 }
 
+.logoutConfirm{
+  height: 120px;
+  width: 220px;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
+.confirmText{
+  font-size: 24px;
+  font-weight: 500;
+}
+
+.btnContainer{
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.stayBtn{
+   background-color: rgb(65, 112, 65);
+   padding: 8px;
+   border-radius: 10%;
+   color: whitesmoke
+}
+.stayBtn:hover{
+  background-color: green;
+  cursor: pointer;
+}
+
+.leaveBtn{
+   background-color: rgb(206, 206, 65);
+   padding: 8px;
+   border-radius: 10%;
+}
+.leaveBtn:hover{
+  background-color: yellow;
+  cursor: pointer;
+}
+
 @media only screen and (max-width:780px){
   .navbar{
     margin-top: 10px;
