--- a/src/components/weatherCard/weather.module.css
+++ b/src/components/weatherCard/weather.module.css
@@ -16,21 +16,38 @@
     transform: scale(1.05);
 }
 
+.location{
+    font-size: 20px;
+    text-align: left;
+    margin: 5px;
+    width: fit-content;
+    /* max-width:100px; */
+    padding: 3px;
+    padding-right:10px;
+    border-radius: 20px;
+    /* position:absolute;
+    left:0 */
+}
+
 @media screen and (max-width:1280px){
     .weatherCard{
         width: 280px;
+        font-size: 28px;
     }
 }
 
 @media screen and (max-width:1140px){
     .weatherCard{
         width: 250px;
+        font-size: 26px;
     }
 }
 
 @media screen and (max-width:1024px){
     .weatherCard{
         width: 220px;
+        font-size: 22px;
+        padding: 5px 5px;
     }
 }
 @media screen and (max-width:768px){
@@ -41,7 +58,7 @@
 
 
 @media screen and (max-width:640px){
-    .weatherCard{
+    /* .weatherCard{
         display: none;
-    }
+    } */
 }
