--- a/src/pages/homepage/home.css
+++ b/src/pages/homepage/home.css
@@ -1,5 +1,7 @@
 .home{
     padding: 5px 5px;
+    /* background-color: red; */
+    margin-top: -10px;
 }
 .yinyang{
     vertical-align: middle;
@@ -43,31 +45,12 @@
     outline: none;
 }
 
-.todo-list{
-    max-height:200px;
-    overflow-y:scroll;
-    overflow-x:hidden;
-}
-
-.todo-list::-webkit-scrollbar{
-    width: 5px;
-}
-.todo-list::-webkit-scrollbar-track{
-    background-color: transparent;
-    width: 5px;
-}
-.todo-list::-webkit-scrollbar-thumb{
-    background-color: #545151;
-    width: 5px;
-    border-radius: 10px;
-}
-
 .gamesButton{
     font-size: 30px;
     margin-bottom: 20px;
     box-shadow: 2px 2px 2px rgb(52, 51, 51);
     width: 250px;
-    padding: 10px 10px;
+    padding: 10px;
     border-radius: 10px;
     margin-top: 10px;
     text-align: center;
@@ -144,32 +127,10 @@ html::-webkit-scrollbar{
 }
 
 .footer{
-    /* position: fixed; */
+    position: fixed;
     bottom: 10px;
     right: 0;
     margin-top: -50px;
-}
-
-
-@media screen and (max-width:640px){
-    .body{
-        display: flex;
-        flex-direction: column;
-    }
-    #subhead{
-        display: none;
-    }
-    .footer{
-        position: relative;
-        right: -80px;
-        padding: 10px;
-    }
-    #chat_dialog{
-       width: 350px;
-    }
-    #trivia_container{
-        display: none;
-    }
 }
 
 
@@ -192,7 +153,7 @@ html::-webkit-scrollbar{
 
 @media screen and (max-width:1024px){
     .gamesButton{
-        max-width: 150px;
+        max-width: 140px;
         font-size: 22px;
         height: 24px;
         margin-bottom: 5px;
@@ -201,21 +162,51 @@ html::-webkit-scrollbar{
         display: none;
     }
     #quotes{
-        max-width: 220px;
+        max-width: 160px;
         font-size: 12px;
     }
     #quotes>div{
         font-size: 18px;
     }
 }
+
+/* @media screen and (max-width:840px){
+    .body{
+        background-color: red;
+    }
+    .gamesButton{
+        max-width: 50px;
+    }
+} */
 @media screen and (max-width:768px){
     .gamesButton{
-        max-width: 160px;
-    }
-    .body{
-       align-items: center;
+        max-width: 120px;
     }
     .footer{
       margin-top: 0px;
     }
+}
+
+@media screen and (max-width:640px){
+    .body{
+        align-items: center;
+     }
+    .body{
+        display: flex;
+        flex-direction: column;
+    }
+    #subhead{
+        display: none;
+    }
+    .footer{
+        position: relative;
+        right: -80px;
+        padding: 10px;
+    }
+    #chat_dialog{
+       width: 350px;
+    }
+    /* #trivia_container{
+        display: none;
+    } */
 }
