--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,11 @@
     padding-right: 0px;
     overflow: hidden;
     cursor: url('./cursor.svg'),auto;
-    background-image: linear-gradient(135deg,rgba(255, 255, 255, 0),rgba(255, 255, 255, 0.8));
+    /* background-image: linear-gradient(135deg,rgba(255, 255, 255, 0),rgba(255, 255, 255, 0.8)); */
+    /* background-image: url(./components/MediaPlayer/gifs/small/rain.jpg); */
+    background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 
 }
 
