--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -100,6 +100,7 @@
 #registerRedirect{
     font-size: 20px;
     background-color: aliceblue;
+    color: black;
     padding: 2px 2px;
     border-radius: 5px;
     width: 260px;
