--- a/src/components/todos/todos.module.css
+++ b/src/components/todos/todos.module.css
@@ -9,10 +9,26 @@
     margin-bottom: 5px;
 }
 
+.todo_list_container{
+    margin: 0em;
+    padding: 0em;
+    color: black;
+    /* background-color: wheat; */
+    /* box-shadow: 2px 3px 10px rgb(42, 40, 40), 0 0 60px #7e5c3b inset;
+    background: #f8f4dd;
+    filter: url(#wavy2); */
+    margin-top: 5px;
+    padding: 2px;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
 .todo_list{
-    max-height:180px;
+    max-height:200px;
     overflow-y:scroll;
     overflow-x:hidden;
+
+
 }
 .todo_list::-webkit-scrollbar{
     width: 5px;
@@ -34,7 +50,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
-    margin-left: 5px;
+    margin-left: 0px;
     padding: 0;
     padding-left: 5px;
     padding-right: 5px;
