--- a/src/components/weatherCard/weather.module.css
+++ b/src/components/weatherCard/weather.module.css
@@ -7,9 +7,16 @@
     margin-top: 2px;
     text-align: center;
     min-height: 120px;
+    max-height: 120px;
     display: grid;
     position:relative;
     box-shadow: 2px 2px 2px rgb(52, 51, 51);
+}
+.weatherCard_inner{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
 }
 .weatherCard:hover{
     cursor: pointer;
@@ -25,8 +32,14 @@
     padding: 3px;
     padding-right:10px;
     border-radius: 20px;
+    /* max-width: 120px; */
+    flex: 1;
     /* position:absolute;
     left:0 */
+}
+
+.weatherDetails{
+    flex: 1;
 }
 
 @media screen and (max-width:1280px){
